Fixed formatting issue, misc edits
Fixed formatting issue on mobile view by removing Google Fonts preconnect in header, updated styling, changed headshot image size and alt text, minor text edits.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
     <title>Daniel J. Forbes</title>
     <link href="styles/style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <table>
@@ -19,7 +12,9 @@
           <td>
             <img
               src="images\forbes_daniel_headshot.jpg"
-              alt="A sketch of someone posing with their hands on their hips"
+			  width="310px"
+			  height="300px"
+              alt="A headshot of Daniel Forbes"
             />
           </td>
           <td class="box" width="100%">
@@ -64,29 +59,30 @@
     </div>
     <div class="box">
       <h1 class="underscore">Research Interests</h1>
-      <p>My (tentatitive) areas of interest are as follows:</p>
-      <ul>
-        <li>Data science / machine learning</li>
-        <li>Computer architecture</li>
-        <li>
-          Hardware security
-          <ul>
-            <li>Side-channel attacks and countermeasures</li>
-          </ul>
-        </li>
-        <li>
-          Cryptography
-          <ul>
-            <li>Quantum-safe cryptography</li>
-          </ul>
-        </li>
-        <li>Quantum computing</li>
-      </ul>
+      <p>My (tentatitive) areas of interest are as follows:
+		  <ul>
+			<li>Data science / machine learning</li>
+			<li>Computer architecture</li>
+			<li>
+			  Hardware security
+			  <ul>
+				<li>Side-channel attacks and countermeasures</li>
+			  </ul>
+			</li>
+			<li>
+			  Cryptography
+			  <ul>
+				<li>Quantum-safe cryptography</li>
+			  </ul>
+			</li>
+			<li>Quantum computing</li>
+		  </ul>
+	  </p>
     </div>
     <div class="box">
       <h1 class="underscore">Miscellaneous</h1>
       <p>
-        I made this website while reading the
+        I made this webpage while reading the
         <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development"
           >MDN Learning Web Development</a
         >
