--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               alt="A headshot of Daniel Forbes"
             />
           </td>
-          <td class="box" width="100%">
+          <td class="box" width="100%" style="font-size: large">
             <p>
               <b>Daniel J. Forbes</b>
               <br />
